k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: server-standlone-container
 namespace: btc-charts
spec:
 containers:
 -  name: server-standlone-container
    image: k8s/server:latest
    imagePullPolicy: Never
    volumeMounts:
    - name: secrets-store-inline
      mountPath: "/mnt/secrets-store"
      readOnly: true
 serviceAccountName: redis-sa
 volumes:
   - name: secrets-store-inline
     csi:
       driver: secrets-store.csi.k8s.io
       readOnly: true
       volumeAttributes:
         secretProviderClass: "redis-spc"
