k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: js
spec:
  type: NodePort
  selector:
    app: js
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: btc-server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: redis
# spec:
#   type: ClusterIP
#   selector:
#     app: redis
#   ports:
#     - protocol: TCP
#       port: 6379
#       targetPort: 6379
