k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-ingress
  namespace: btc-charts
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - btc.charts.com
  #   secretName: btc-charts-com-tls
  rules:
  # - host: btc.charts.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: js
            port:
              number: 80
      - path: /api/btc
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8081
